--- a/.github/workflows/Notion2Hugo.yml
+++ b/.github/workflows/Notion2Hugo.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           notion_secret: ${{ secrets.NOTION_SECRET }}
           database_id: ${{ secrets.NOTION_DATABASE_ID }}
-          pic_migrate: true
+          pic_migrate: false
           pic_bed_config: ${{ secrets.PICBED_CONFIG }}
           pic_compress: true
           output_page_dir: 'content'
