--- a/.github/workflows/Notion2Hugo.yml
+++ b/.github/workflows/Notion2Hugo.yml
@@ -1,9 +1,9 @@
 name: Notion2Hugo
+
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron: '*/30 1-17/1 * * *'
 
 permissions:
   contents: write
@@ -11,24 +11,26 @@ permissions:
   id-token: write
 
 jobs:
-  sync:
-    name: Notion2Hugo on ubuntu-latest
+  notionSyncTask:
+    name: Sync Notion to Hugo
     runs-on: ubuntu-latest
     outputs:
-      HAS_CHANGES: ${{ steps.NotionSync.outputs.updated_count !='0' }}
+      HAS_CHANGES: ${{ steps.NotionSync.outputs.updated_count != '0' }}
     steps:
       - name: Checkout blog and theme
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
           fetch-depth: 0
+
       - name: Check the NOTION_SYNC_DATETIME
         id: GetNotionSyncDatetime
         run: |
           NOTION_SYNC_DATETIME=$(git log -n 1 --grep="NotionSync" --format="%aI")
           echo "NOTION_SYNC_DATETIME=$NOTION_SYNC_DATETIME" >> "$GITHUB_OUTPUT"
           echo -e "Latest notion sync datetime:\n$NOTION_SYNC_DATETIME"
-      - name: Convert notion to markdown
+
+      - name: Convert Notion to Markdown
         id: NotionSync
         uses: Doradx/notion2markdown-action@v1
         with:
@@ -42,7 +44,8 @@ jobs:
           clean_unpublished_post: true
           metas_keeped: slug
           metas_excluded: pstatus, ptype
-          # last_sync_datetime: ${{ steps.GetNotionSyncDatetime.outputs.NOTION_SYNC_DATETIME }}
+          last_sync_datetime: ${{ steps.GetNotionSyncDatetime.outputs.NOTION_SYNC_DATETIME }}
+
       - name: Commit & Push
         if: steps.NotionSync.outputs.updated_count != '0'
         uses: stefanzweifel/git-auto-commit-action@v4
@@ -50,46 +53,53 @@ jobs:
           file_pattern: 'content/'
           commit_message: Automatic NotionSync.
 
-  # Deployment job
-  deploy:
+  build:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     env:
       HUGO_VERSION: 0.125.1
-    needs: sync
+    needs: notionSyncTask
+    if: needs.notionSyncTask.outputs.HAS_CHANGES
     steps:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+
       - name: Install Dart Sass
         run: sudo snap install dart-sass
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
           submodules: recursive
-      - name: Git Pull
-        run: git pull
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
+
       - name: Install Node.js dependencies
-        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+        run: |
+          [[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true
+
       - name: Build with Hugo
         env:
-          # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
-        run: |
-          hugo \
-            --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+        run: hugo --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
+          name: hugo-site
           path: ./public
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
