--- a/.github/workflows/Notion2Hugo.yml
+++ b/.github/workflows/Notion2Hugo.yml
@@ -40,7 +40,7 @@ jobs:
           pic_bed_config: ${{ secrets.PICBED_CONFIG }}
           pic_compress: true
           output_page_dir: 'content'
-          output_post_dir: 'content/posts'
+          output_post_dir: 'content/notion'
           clean_unpublished_post: false
           metas_keeped: slug
           metas_excluded: pstatus, ptype
