--- a/.github/workflows/Notion2Hugo.yml
+++ b/.github/workflows/Notion2Hugo.yml
@@ -2,8 +2,9 @@ name: Notion2Hugo
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '*/30 1-17/1 * * *'
+  repository_dispatch:
+      types: 
+        - notion sync
 
 permissions:
   contents: write
