--- a/.github/workflows/Notion2Hugo.yml
+++ b/.github/workflows/Notion2Hugo.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   repository_dispatch:
     types: 
-      - notion sync
+      - notion_sync
 
 permissions:
   contents: write
