--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-publish = "public"
+base = "blog"
+publish = "blog/public"
 command = "hugo --gc --minify"
 
 [context.production.environment]
